chore: update macOS runner version in test-installers workflow

--- a/.github/workflows/test-installers.yml
+++ b/.github/workflows/test-installers.yml
@@ -42,7 +42,7 @@ jobs:
 
   test-macos-installer:
     name: Test macOS Installer
-    runs-on: macos-latest
+    runs-on: macos-15.5
 
     steps:
       - uses: actions/checkout@v4
